fixing minor eror

--- a/index.css
+++ b/index.css
@@ -18,9 +18,14 @@ body {
     padding: 5px;
     justify-content: center;
     overflow-x: hidden;
-    
+    cursor: pointer;
 }
-#btntambah :hover{
+#btnEdit {
+    border: none;
+    border-radius: 5px;
+    background-color: yellow;
+}
+#btntambah:hover{
     background-color: #1672eb;
     scale: 1;
 }
@@ -58,5 +63,12 @@ li{
     box-shadow: black;
     border-radius: 12px;
     color: black;
+    width: fit-content;
+}
+#btnEdit{
+    background-color: yellow;
+    border: none;
+    margin: 5px;
+    border-radius: 5px;
 }
 
