--- a/index.css
+++ b/index.css
@@ -5,25 +5,21 @@ body {
 .judul {
     text-align: center;
 }
-.tombol {
+#btn {
     color: rgb(0, 0, 0);
     background-color: #e7ecfc;
     padding: 0 20px;
     border-radius: 15px;
     border: none;
+    cursor: pointer;
 }
-.tombol:hover{
+#btn:hover{
     color: #001f85(255, 234, 234);
     background-color: rgb(255, 255, 255);
     transition: 0.2s;
     transform: scale(1.);
 }
-.kegiatan {
-    background-color: rgb(105, 105, 105);
-    color: white;
-    padding: 10px;
-}
-.kegiatan::placeholder{
+.activity::placeholder{
     color: rgb(201, 201, 201);
 }
 .form {
@@ -34,8 +30,9 @@ body {
 #list li {
     display: flex;
     margin: auto;
-    border: 2px solid black;
-    background-color: rgb(144, 139, 144);
+    border: none;
+    border-radius: 15px;
+    background-color: rgb(96, 98, 190);
     padding: 10px;
     text-align: center;
     font-size: 25px;
@@ -46,9 +43,9 @@ body {
 
 .btnEdit {
     color: black;
-    background-color: rgb(81, 81, 194);
+    background-color: rgb(194, 192, 81);
     padding: 0px 15px;
-    border: 2px solid black;
+    border: none;
     margin-left: 30px;
 }
 .btnEdit:hover {
@@ -57,7 +54,7 @@ body {
 .btnDelete {
     color: black;
     background-color: rgb(197, 69, 69);
-    border: 2px solid black;
+    border: none;
     margin-left: 10px;
 }
 .btnDelete:hover {
